--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "seed:recipes": "tsx prisma/seed-recipes.ts"
+
   },
   "dependencies": {
     "@prisma/client": "^6.19.2",
@@ -25,6 +27,7 @@
     "eslint-config-next": "16.1.3",
     "prisma": "^6.19.2",
     "tailwindcss": "^4",
+    "tsx": "^4.21.0",
     "typescript": "^5"
   }
 }
