--- a/package.json
+++ b/package.json
@@ -6,9 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint",
-    "seed:recipes": "tsx prisma/seed-recipes.ts"
-
+    "lint": "eslint"
   },
   "dependencies": {
     "@prisma/client": "^6.19.2",
@@ -27,7 +25,6 @@
     "eslint-config-next": "16.1.3",
     "prisma": "^6.19.2",
     "tailwindcss": "^4",
-    "tsx": "^4.21.0",
     "typescript": "^5"
   }
 }
