--- a/package.json
+++ b/package.json
@@ -8,9 +8,8 @@
     "start": "next start",
     "lint": "eslint"
   },
-  "prisma": {
-    "seed": "node prisma/seed.js"
-  },
+  "prisma": { "seed": "ts-node -P tsconfig.seed.json prisma/seed-all.ts" }
+   ,
   "dependencies": {
     "@prisma/client": "^6.19.2",
     "bcryptjs": "^3.0.3",
