--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
     "start": "next start",
     "lint": "eslint"
   },
-  "prisma": { "seed": "ts-node -P tsconfig.seed.json prisma/seed-all.ts" }
-   ,
+  "prisma": {
+    "seed": "ts-node -P tsconfig.seed.json prisma/seed-all.ts"
+  },
   "dependencies": {
     "@prisma/client": "^6.19.2",
     "bcryptjs": "^3.0.3",
